# quick-impl

./: Cargo.toml  README.md
examples/: config.rs  person.rs  shapes.rs  status.rs  web_event.rs
src/: attr.rs  attributes.rs  config.rs  ctx.rs  expand.rs  fields.rs  idents.rs  input.rs  lib.rs  order.rs  respan.rs  utils.rs
src/attributes/: mod.rs
src/components/: idents.rs  mod.rs
src/components/enums/: mod.rs
src/components/enums/methods/: as_ref.rs  as_ref_mut.rs  from.rs  into.rs  is.rs  is_and.rs  mod.rs  set.rs  try_into.rs
src/components/enums/traits/: default.rs  from.rs  mod.rs  try_from.rs  try_into.rs
src/components/enums/variant_methods/: as_ref.rs  as_ref_mut.rs  from.rs  inspect.rs  into.rs  is.rs  is_and.rs  mod.rs  set.rs  try_into.rs
src/components/enums/variant_traits/: default.rs  from.rs  mod.rs  try_from.rs  try_into.rs
src/components/structs/: mod.rs
src/components/structs/field_methods/: from.rs  get.rs  get_clone.rs  get_mut.rs  into.rs  mod.rs  replace.rs  set.rs  take.rs  with.rs
src/components/structs/field_traits/: as_mut.rs  as_ref.rs  borrow.rs  borrow_mut.rs  deref.rs  deref_mut.rs  from.rs  into.rs  mod.rs
src/components/structs/global_methods/: from_tuple.rs  into_parts.rs  mod.rs  new.rs
src/components/structs/global_traits/: from.rs  into.rs  mod.rs
src/components/structs/methods/: from.rs  get.rs  get_clone.rs  get_mut.rs  into.rs  mod.rs  set.rs  take.rs  with.rs
src/components/structs/traits/: as_mut.rs  as_ref.rs  borrow.rs  (+6 more)
src/config/: doc.rs  mod.rs  name.rs
src/tokens/: delimiter.rs  destructure.rs  indexed_field.rs  mod.rs  variant_or_field.rs
tests/: test_enum.rs  test_enum_all.rs  test_struct.rs
