[package]
name = "quick-impl"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/makcandrov/quick-impl"
homepage = "https://github.com/makcandrov/quick-impl"
documentation = "https://docs.rs/quick-impl"
description = "A Rust procedural macro auto-generating common methods on enums ans structures."
license = "MIT OR Apache-2.0"
keywords = ["quick", "impl", "derive"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
convert_case = "0.6"
