[package]
name = "quick-impl"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/makcandrov/quick-impl"
homepage = "https://github.com/makcandrov/quick-impl"
documentation = "https://docs.rs/quick-impl"
description = "A Rust procedural macro auto-generating common methods on enums ans structures."
license = "MIT OR Apache-2.0"
keywords = ["quick", "impl", "derive"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
