[package]
name = "quick-impl"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/makcandrov/quick-impl"
homepage = "https://github.com/makcandrov/quick-impl"
documentation = "https://docs.rs/quick-impl"
description = "A procedural macro auto-generating common methods on enums and structs."
license = "MIT OR Apache-2.0"
keywords = ["quick", "impl", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
